Edited sketches/desktop/wave.html via GitHub

--- a/sketches/desktop/wave.html
+++ b/sketches/desktop/wave.html
@@ -28,7 +28,7 @@
 		<span>spock</span></li>
 	<li class="add" title="Add Participant. . ."></li>
       </ul>
-      <div class="ThreadView collapsed">
+      <div class="ThreadView">
       <ul>
          <li class="BlipView">
             <div class="control">
