Edited sketches/desktop/wave.html via GitHub

--- a/sketches/desktop/wave.html
+++ b/sketches/desktop/wave.html
@@ -10,7 +10,7 @@
    <script type="text/javascript" src="http://code.jquery.com/jquery-1.6.2.min.js"></script>
    <script type="text/javascript">
       $(function() {
-         $('ul.ThreadView .expand').click(function(evt) {
+         $('.ThreadView .expand').click(function(evt) {
             $(evt.target).parent().toggleClass('collapsed');
          });
       });
