Edited sketches/desktop/wave.html via GitHub

--- a/sketches/desktop/wave.html
+++ b/sketches/desktop/wave.html
@@ -135,7 +135,7 @@
             </div>
             <div class="ThreadView collapsed">
             <ul>
-               <li class="expand"></li>
+               <p class="expand"></p>
                <li class="BlipView addBlip">
                   <div class="inner">
                      Add a post
