--- a/sketches/desktop/index.html
+++ b/sketches/desktop/index.html
@@ -80,7 +80,7 @@ $().ready(function() {
 			<li><span><img src="w.png" alt="folder's icon" />Unread</span></li>
 			<li><span><img src="w.png" alt="folder's icon" />Chats</span></li>
 			<li><span><img src="w.png" alt="folder's icon" />Spam</span></li>
-			<li><span><img src="w.png" alt="folder's icon" />Trash</span></li>
+			<li><span><img src="w.png" alt="folder's icon" />Archive</span></li>
 			<li><span><img src="img/search.png" alt="folder's icon" />Searches</span> <ul>
 				<li><span><img src="img/search.png" alt="folder's icon"/>Preferences</span></li>
 				<li><span><img src="img/search.png" alt="folder's icon"/>PyOfWave</span></li>
@@ -102,16 +102,16 @@ $().ready(function() {
 	</aside>
 	<ul class="content">
 		<li style="border-color: #9CA0EF;" class="selected" title="View this wave">
-                    <p><img src="img/participant.png" alt="spock's avatar" title="spock@federation.org" style="border: 3px solid #9CA0EF;" class="left"/>
+                    <p><img src="img/participant.png" alt="spock's avatar" title="spock@federation.gov" style="border: 3px solid #9CA0EF;" class="left"/>
 			<img src="img/participant.png" alt="malcom's avatar" title="malcom@serenity.ship" style="border: 3px solid #EFCC9C;" class="left"/>
 			<img src="img/participant.png" alt="shepherd's avatar" title="shepherd@serenity.ship" style="border: 3px solid #9CEFBD;" class="left"/>
                     </p>
-                    <h2>spock@federation.org <time>04:05:06 07/08/09</time></h2>
+                    <h2>spock@federation.gov <time>04:05:06 07/08/09</time></h2>
 		    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ligula massa, imperdiet vitae ultricies in, scelerisque non tellus. Sed vel.</p>
 		</li>
 		<li style="border-color: #EFCC9C;" title="View this wave">
                     <p><img src="img/participant.png" alt="malcom's avatar" title="malcom@serenity.ship" style="border: 3px solid #EFCC9C;" class="left"/>
-			<img src="img/participant.png" alt="spock's avatar" title="spock@federation.org" style="border: 3px solid #9CA0EF;" class="left"/>
+			<img src="img/participant.png" alt="spock's avatar" title="spock@federation.gov" style="border: 3px solid #9CA0EF;" class="left"/>
 			<img src="img/participant.png" alt="shepherd's avatar" title="shepherd@serenity.ship" style="border: 3px solid #9CEFBD;" class="left"/>
                     </p>
                     <h2>malcom@serenity.ship <time>05:06:07 08/09/10</time></h2>
@@ -125,7 +125,7 @@ $().ready(function() {
 		</li>
 		<li style="border-color: #9CEFBD;" title="View this wave">
                     <p><img src="img/participant.png" alt="shepherd's avatar" title="shepherd@serenity.ship" style="border: 3px solid #9CEFBD;" class="left"/>
-			<img src="img/participant.png" alt="spock's avatar" title="spock@federation.org" style="border: 3px solid #9CA0EF;" class="left"/>
+			<img src="img/participant.png" alt="spock's avatar" title="spock@federation.gov" style="border: 3px solid #9CA0EF;" class="left"/>
 			<img src="img/participant.png" alt="malcom's avatar" title="malcom@serenity.ship" style="border: 3px solid #EFCC9C;" class="left"/>
                     </p>
                     <h2>shepherd@serenity.ship <time>07:08:09 10/11/12</time></h2>
@@ -138,16 +138,16 @@ $().ready(function() {
 		    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ligula massa, imperdiet vitae ultricies in, scelerisque non tellus. Sed vel.</p>
 		</li>
                 <li style="border-color: #9CA0EF;" title="View this wave">
-                    <p><img src="img/participant.png" alt="spock's avatar" title="spock@federation.org" style="border: 3px solid #9CA0EF;" class="left"/>
+                    <p><img src="img/participant.png" alt="spock's avatar" title="spock@federation.gov" style="border: 3px solid #9CA0EF;" class="left"/>
 			<img src="img/participant.png" alt="malcom's avatar" title="malcom@serenity.ship" style="border: 3px solid #EFCC9C;" class="left"/>
 			<img src="img/participant.png" alt="shepherd's avatar" title="shepherd@serenity.ship" style="border: 3px solid #9CEFBD;" class="left"/>
                     </p>
-                    <h2>spock@federation.org <time>04:05:06 07/08/09</time></h2>
+                    <h2>spock@federation.gov <time>04:05:06 07/08/09</time></h2>
 		    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ligula massa, imperdiet vitae ultricies in, scelerisque non tellus. Sed vel.</p>
 		</li>
 		<li style="border-color: #EFCC9C;" title="View this wave">
                     <p><img src="img/participant.png" alt="malcom's avatar" title="malcom@serenity.ship" style="border: 3px solid #EFCC9C;" class="left"/>
-			<img src="img/participant.png" alt="spock's avatar" title="spock@federation.org" style="border: 3px solid #9CA0EF;" class="left"/>
+			<img src="img/participant.png" alt="spock's avatar" title="spock@federation.gov" style="border: 3px solid #9CA0EF;" class="left"/>
 			<img src="img/participant.png" alt="shepherd's avatar" title="shepherd@serenity.ship" style="border: 3px solid #9CEFBD;" class="left"/>
                     </p>
                     <h2>malcom@serenity.ship <time>05:06:07 08/09/10</time></h2>
@@ -161,7 +161,7 @@ $().ready(function() {
 		</li>
 		<li style="border-color: #9CEFBD;" title="View this wave">
                     <p><img src="img/participant.png" alt="shepherd's avatar" title="shepherd@serenity.ship" style="border: 3px solid #9CEFBD;" class="left"/>
-			<img src="img/participant.png" alt="spock's avatar" title="spock@federation.org" style="border: 3px solid #9CA0EF;" class="left"/>
+			<img src="img/participant.png" alt="spock's avatar" title="spock@federation.gov" style="border: 3px solid #9CA0EF;" class="left"/>
 			<img src="img/participant.png" alt="malcom's avatar" title="malcom@serenity.ship" style="border: 3px solid #EFCC9C;" class="left"/>
                     </p>
                     <h2>shepherd@serenity.ship <time>07:08:09 10/11/12</time></h2>
@@ -174,16 +174,16 @@ $().ready(function() {
 		    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ligula massa, imperdiet vitae ultricies in, scelerisque non tellus. Sed vel.</p>
 		</li>
                 <li style="border-color: #9CA0EF;" title="View this wave">
-                    <p><img src="img/participant.png" alt="spock's avatar" title="spock@federation.org" style="border: 3px solid #9CA0EF;" class="left"/>
+                    <p><img src="img/participant.png" alt="spock's avatar" title="spock@federation.gov" style="border: 3px solid #9CA0EF;" class="left"/>
 			<img src="img/participant.png" alt="malcom's avatar" title="malcom@serenity.ship" style="border: 3px solid #EFCC9C;" class="left"/>
 			<img src="img/participant.png" alt="shepherd's avatar" title="shepherd@serenity.ship" style="border: 3px solid #9CEFBD;" class="left"/>
                     </p>
-                    <h2>spock@federation.org <time>04:05:06 07/08/09</time></h2>
+                    <h2>spock@federation.gov <time>04:05:06 07/08/09</time></h2>
 		    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ligula massa, imperdiet vitae ultricies in, scelerisque non tellus. Sed vel.</p>
 		</li>
 		<li style="border-color: #EFCC9C;" title="View this wave">
                     <p><img src="img/participant.png" alt="malcom's avatar" title="malcom@serenity.ship" style="border: 3px solid #EFCC9C;" class="left"/>
-			<img src="img/participant.png" alt="spock's avatar" title="spock@federation.org" style="border: 3px solid #9CA0EF;" class="left"/>
+			<img src="img/participant.png" alt="spock's avatar" title="spock@federation.gov" style="border: 3px solid #9CA0EF;" class="left"/>
 			<img src="img/participant.png" alt="shepherd's avatar" title="shepherd@serenity.ship" style="border: 3px solid #9CEFBD;" class="left"/>
                     </p>
                     <h2>malcom@serenity.ship <time>05:06:07 08/09/10</time></h2>
@@ -197,7 +197,7 @@ $().ready(function() {
 		</li>
 		<li style="border-color: #9CEFBD;" title="View this wave">
                     <p><img src="img/participant.png" alt="shepherd's avatar" title="shepherd@serenity.ship" style="border: 3px solid #9CEFBD;" class="left"/>
-			<img src="img/participant.png" alt="spock's avatar" title="spock@federation.org" style="border: 3px solid #9CA0EF;" class="left"/>
+			<img src="img/participant.png" alt="spock's avatar" title="spock@federation.gov" style="border: 3px solid #9CA0EF;" class="left"/>
 			<img src="img/participant.png" alt="malcom's avatar" title="malcom@serenity.ship" style="border: 3px solid #EFCC9C;" class="left"/>
                     </p>
                     <h2>shepherd@serenity.ship <time>07:08:09 10/11/12</time></h2>
@@ -210,16 +210,16 @@ $().ready(function() {
 		    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ligula massa, imperdiet vitae ultricies in, scelerisque non tellus. Sed vel.</p>
 		</li>
                 <li style="border-color: #9CA0EF;" title="View this wave">
-                    <p><img src="img/participant.png" alt="spock's avatar" title="spock@federation.org" style="border: 3px solid #9CA0EF;" class="left"/>
+                    <p><img src="img/participant.png" alt="spock's avatar" title="spock@federation.gov" style="border: 3px solid #9CA0EF;" class="left"/>
 			<img src="img/participant.png" alt="malcom's avatar" title="malcom@serenity.ship" style="border: 3px solid #EFCC9C;" class="left"/>
 			<img src="img/participant.png" alt="shepherd's avatar" title="shepherd@serenity.ship" style="border: 3px solid #9CEFBD;" class="left"/>
                     </p>
-                    <h2>spock@federation.org <time>04:05:06 07/08/09</time></h2>
+                    <h2>spock@federation.gov <time>04:05:06 07/08/09</time></h2>
 		    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ligula massa, imperdiet vitae ultricies in, scelerisque non tellus. Sed vel.</p>
 		</li>
 		<li style="border-color: #EFCC9C;" title="View this wave">
                     <p><img src="img/participant.png" alt="malcom's avatar" title="malcom@serenity.ship" style="border: 3px solid #EFCC9C;" class="left"/>
-			<img src="img/participant.png" alt="spock's avatar" title="spock@federation.org" style="border: 3px solid #9CA0EF;" class="left"/>
+			<img src="img/participant.png" alt="spock's avatar" title="spock@federation.gov" style="border: 3px solid #9CA0EF;" class="left"/>
 			<img src="img/participant.png" alt="shepherd's avatar" title="shepherd@serenity.ship" style="border: 3px solid #9CEFBD;" class="left"/>
                     </p>
                     <h2>malcom@serenity.ship <time>05:06:07 08/09/10</time></h2>
@@ -233,7 +233,7 @@ $().ready(function() {
 		</li>
 		<li style="border-color: #9CEFBD;" title="View this wave">
                     <p><img src="img/participant.png" alt="shepherd's avatar" title="shepherd@serenity.ship" style="border: 3px solid #9CEFBD;" class="left"/>
-			<img src="img/participant.png" alt="spock's avatar" title="spock@federation.org" style="border: 3px solid #9CA0EF;" class="left"/>
+			<img src="img/participant.png" alt="spock's avatar" title="spock@federation.gov" style="border: 3px solid #9CA0EF;" class="left"/>
 			<img src="img/participant.png" alt="malcom's avatar" title="malcom@serenity.ship" style="border: 3px solid #EFCC9C;" class="left"/>
                     </p>
                     <h2>shepherd@serenity.ship <time>07:08:09 10/11/12</time></h2>
@@ -262,7 +262,7 @@ $().ready(function() {
 			<li><img style="border-color: #9CEFBD;" src="img/participant.png" alt="shepherd@serenity.ship's avatar" title="shepherd@serenity.ship"/>
 				<span>shepherd</span></li>
 			<li class="sep"></li>
-			<li><img style="border: none;" src="img/participant.png" alt="spock@federation.org's avatar" title="spock@federation.org"/>
+			<li><img style="border: none;" src="img/participant.png" alt="spock@federation.gov's avatar" title="spock@federation.gov"/>
 				<span>spock</span></li>
 			<li class="add" title="Add Participant. . ."></li>
 		</ul>
