Edited sketches/desktop/wave.html via GitHub

--- a/sketches/desktop/wave.html
+++ b/sketches/desktop/wave.html
@@ -24,7 +24,7 @@
 	<li><img style="border-color: #9CEFBD;" src="img/participant.png" alt="shepherd@serenity.ship's avatar" title="shepherd@serenity.ship"/>
 		<span>shepherd</span></li>
 	<li class="sep"></li>
-	<li><img style="border: none;" src="img/participant.png" alt="spock@federation.org's avatar" title="spock@federation.org"/>
+	<li><img style="border: none;" src="img/participant.png" alt="spock@federation.gov's avatar" title="spock@federation.gov"/>
 		<span>spock</span></li>
 	<li class="add" title="Add Participant. . ."></li>
       </ul>
