Adding mockup links to the demo placeholder page.

--- a/demo/index.html
+++ b/demo/index.html
@@ -28,6 +28,12 @@
     <p>When PyOfWave is demoable, we'll fill this placeholder link with a online demo. However, to do this, we'll have to switch to a (rare) host which will allow us to run a long running Python process connecting to the system's sockets.</p>
     <p>Ideally we'd like to have this demo run on a dedicated machine, and any offers are welcome.</p>
 
+    <h2>Sketches</h2>
+    <ul>
+       <li><a href="/sketches/desktop" title="View Sketch">Desktop Sketch</a></li>
+       <li><a href="/sketches/desktop/wave.html" title="View Sketch">Wave sketch</a></li>
+       <li><a href="/sketches/mobile/powMobile.html" title="View Sketch">Mobile Sketch</a></li>
+    </ul>
     <div class="footer">
       &copy;2011 Adrian Cochrane Licensed under the Mozilla Public License
     </div>
