Edited index.html via GitHub

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <p>Knygar Deserves acknowledgement for his undieing support of PyOfWave, as well as his effort in promoting the project and providing branding.</p>
 
     <div class="footer">
-      &copy;2011 Adrian Cochrane Licensed under the Mozilla Public License
+      &copy;2011 Adrian Cochrane. Licensed under the Mozilla Public License. All rights shared. 
     </div>
 
   </div>
