Edited about/index.html via GitHub

--- a/about/index.html
+++ b/about/index.html
@@ -45,7 +45,7 @@
     <p>The list will be compiled later.</p>
 
     <div class="footer">
-      &copy;2011 Adrian Cochrane Licensed under the Mozilla Public License
+      &copy;2011 Adrian Cochrane. Licensed under the Mozilla Public License. All rights shared. 
     </div>
 
   </div>
