--- a/demo/index.html
+++ b/demo/index.html
@@ -35,7 +35,7 @@
        <li><a href="/sketches/mobile/powMobile.html" title="View Sketch">Mobile Sketch</a></li>
     </ul>
     <div class="footer">
-      &copy;2011 Adrian Cochrane Licensed under the Mozilla Public License
+      &copy;2011 Adrian Cochrane. Licensed under the Mozilla Public License. All rights shared. 
     </div>
 
   </div>
