--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
       <li class="current">Home</li>
       <li><a href="about/" title="About PyOfWave">About</a></li>
       <li><a href="http://pyofwave.wikispaces.com" title="View wiki pages on design and usage">Wiki</a></li>
-      <li><a href="docs/" title="PyOfWave Documentation">Documentation</a></li>
+      <li><a href="/docs/" title="PyOfWave Documentation">Documentation</a></li>
       <li><a href="https://github.com/alcinnz/PyOfWave" title="View PyOfWave on GitHub.">Project</a></li>
       <li><a href="https://github.com/alcinnz/PyOfWave/zipball/master" title="Download PyOfWave Server and Web Client">Download</a></li>
-      <li><a href="demo/" title="Demo PyOfWave (to be provided)">Demo</a></li>
+      <li><a href="/demo/" title="Demo PyOfWave (to be provided)">Demo</a></li>
     </ul>
 
   <header>
@@ -38,7 +38,7 @@
 <p>Knygar Deserves acknowledgement for his undieing support of PyOfWave, as well as his effort in promoting the project and providing branding.</p>
 
     <div class="footer">
-      &copy;2011 Adrian Cochrane. Licensed under the Mozilla Public License. All rights shared. 
+      &copy;2011 Adrian Cochrane. Licensed under the <a href="https://raw.github.com/alcinnz/PyOfWave/master/LICENSE" title="Read our license">Mozilla Public License</a>. All rights shared. 
     </div>
 
   </div>
