--- a/about/index.html
+++ b/about/index.html
@@ -10,13 +10,13 @@
 
 <body>
   <ul id="nav">
-      <li><a href="/" title="Back to homepage">Home</a></li>
-      <li class="current">About</li>
+      <li class="current">Home</li>
+      <li><a href="about/" title="About PyOfWave">About</a></li>
       <li><a href="http://pyofwave.wikispaces.com" title="View wiki pages on design and usage">Wiki</a></li>
-      <li><a href="docs/" title="PyOfWave Documentation">Documentation</a></li>
+      <li><a href="/docs/" title="PyOfWave Documentation">Documentation</a></li>
       <li><a href="https://github.com/alcinnz/PyOfWave" title="View PyOfWave on GitHub.">Project</a></li>
       <li><a href="https://github.com/alcinnz/PyOfWave/zipball/master" title="Download PyOfWave Server and Web Client">Download</a></li>
-      <li><a href="demo/" title="Demo PyOfWave (to be provided)">Demo</a></li>
+      <li><a href="/demo/" title="Demo PyOfWave (to be provided)">Demo</a></li>
     </ul>
   <header>
     <h1>PyOfWave</h1>
@@ -45,7 +45,7 @@
     <p>The list will be compiled later.</p>
 
     <div class="footer">
-      &copy;2011 Adrian Cochrane. Licensed under the Mozilla Public License. All rights shared. 
+      &copy;2011 Adrian Cochrane. Licensed under the <a href="https://raw.github.com/alcinnz/PyOfWave/master/LICENSE" title="Read our license.">Mozilla Public License</a>. All rights shared. 
     </div>
 
   </div>
