Edited about/index.html via GitHub

--- a/about/index.html
+++ b/about/index.html
@@ -10,8 +10,8 @@
 
 <body>
   <ul id="nav">
-      <li class="current">Home</li>
-      <li><a href="about/" title="About PyOfWave">About</a></li>
+      <li><a href="/" title="Our Homepage.">Home</a></li>
+      <li class="current">About</li>
       <li><a href="http://pyofwave.wikispaces.com" title="View wiki pages on design and usage">Wiki</a></li>
       <li><a href="/docs/" title="PyOfWave Documentation">Documentation</a></li>
       <li><a href="https://github.com/alcinnz/PyOfWave" title="View PyOfWave on GitHub.">Project</a></li>
