Edited demo/index.html via GitHub

--- a/demo/index.html
+++ b/demo/index.html
@@ -12,9 +12,9 @@
   <header>
     <ul id="nav">
       <li><a href="/" title="Back to homepage">Home</a></li>
-      <li><a href="/about/index.html" title="About PyOfWave">About</a></li>
+      <li><a href="/about/" title="About PyOfWave">About</a></li>
       <li><a href="http://pyofwave.wikispaces.com" title="View wiki pages on design and usage">Wiki</a></li>
-      <li><a href="/docs/index.html" title="PyOfWave Documentation">Documentation</a></li>
+      <li><a href="/docs/" title="PyOfWave Documentation">Documentation</a></li>
       <li><a href="https://github.com/alcinnz/PyOfWave" title="View PyOfWave on GitHub.">Project</a></li>
       <li><a href="http://github.com/alcinnz/PyOfWave/zipball/masterz" title="Download PyOfWave Server and Web Client">Download</a></li>
       <li class="current">Demo</li>
@@ -35,7 +35,7 @@
        <li><a href="/sketches/mobile/powMobile.html" title="View Sketch">Mobile Sketch</a></li>
     </ul>
     <div class="footer">
-      &copy;2011 Adrian Cochrane. Licensed under the Mozilla Public License. All rights shared. 
+      &copy;2011 Adrian Cochrane. Licensed under the <a href="https://raw.github.com/alcinnz/PyOfWave/master/LICENSE" title="Read our license.">Mozilla Public License</a>. All rights shared. 
     </div>
 
   </div>
