Improving site with clearer theme. Images need transparancy.

--- a/about/index.html
+++ b/about/index.html
@@ -19,7 +19,7 @@
       <li><a href="/demo/" title="Demo PyOfWave (to be provided)">Demo</a></li>
     </ul>
   <header>
-    <h1>PyOfWave</h1>
+    <h1><img src="/images/PyOfWave.png" alt="PyOfWave's logo." /></h1>
   </header>
 
   <div id="container">
@@ -43,13 +43,10 @@
     <h2>Acknowledgements</h2>
     <p>Various projects supported PyOfWave indirectly and we would like to think them.</p>
     <p>The list will be compiled later.</p>
+</div>
 
-    <div class="footer">
-      &copy;2011 Adrian Cochrane. Licensed under the <a href="https://raw.github.com/alcinnz/PyOfWave/master/LICENSE" title="Read our license.">Mozilla Public License</a>. All rights shared. 
-    </div>
-
-  </div>
-
-  
+  <footer>
+    &copy;2011 Adrian Cochrane. Licensed under the <a href="https://raw.github.com/alcinnz/PyOfWave/master/LICENSE" title="Read our license">Mozilla Public License</a>. All rights shared. 
+  </footer>
 </body>
 </html>
