--- a/demo/index.html
+++ b/demo/index.html
@@ -20,7 +20,8 @@
       <li class="current">Demo</li>
     </ul>
 
-    <h1>PyOfWave</h1>
+  <header>
+    <h1><img src="/images/PyOfWave.png" alt="PyOfWave's logo." /></h1>
   </header>
 
   <div id="container">
@@ -34,12 +35,10 @@
        <li><a href="/sketches/desktop/wave.html" title="View Sketch">Wave sketch</a></li>
        <li><a href="/sketches/mobile/powMobile.html" title="View Sketch">Mobile Sketch</a></li>
     </ul>
-    <div class="footer">
-      &copy;2011 Adrian Cochrane. Licensed under the <a href="https://raw.github.com/alcinnz/PyOfWave/master/LICENSE" title="Read our license.">Mozilla Public License</a>. All rights shared. 
     </div>
 
-  </div>
-
-  
+  <footer>
+    &copy;2011 Adrian Cochrane. Licensed under the <a href="https://raw.github.com/alcinnz/PyOfWave/master/LICENSE" title="Read our license">Mozilla Public License</a>. All rights shared. 
+  </footer>
 </body>
 </html>
