--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </ul>
 
   <header>
-    <h1>PyOfWave</h1>
+    <h1><img src="/images/PyOfWave.png" alt="PyOfWave's logo." /></h1>
   </header>
 
   <div id="container">
@@ -36,13 +36,11 @@
 <h2>Authors</h2>
 <p>Adrian "alcinnz" Cochrane (alcinnz@eml.cc)</p>
 <p>Knygar Deserves acknowledgement for his undieing support of PyOfWave, as well as his effort in promoting the project and providing branding.</p>
-
-    <div class="footer">
-      &copy;2011 Adrian Cochrane. Licensed under the <a href="https://raw.github.com/alcinnz/PyOfWave/master/LICENSE" title="Read our license">Mozilla Public License</a>. All rights shared. 
-    </div>
-
   </div>
 
+  <footer>
+    &copy;2011 Adrian Cochrane. Licensed under the <a href="https://raw.github.com/alcinnz/PyOfWave/master/LICENSE" title="Read our license">Mozilla Public License</a>. All rights shared. 
+  </footer>
   
 </body>
 </html>
