--- a/about/index.html
+++ b/about/index.html
@@ -14,8 +14,8 @@
       <li class="current">About</li>
       <li><a href="http://pyofwave.wikispaces.com" title="View wiki pages on design and usage">Wiki</a></li>
       <li><a href="/docs/" title="PyOfWave Documentation">Documentation</a></li>
-      <li><a href="https://github.com/alcinnz/PyOfWave" title="View PyOfWave on GitHub.">Project</a></li>
-      <li><a href="https://github.com/alcinnz/PyOfWave/zipball/master" title="Download PyOfWave Server and Web Client">Download</a></li>
+      <li><a href="https://github.com/pyofwave/PyOfWave" title="View PyOfWave on GitHub.">Project</a></li>
+      <li><a href="https://github.com/pyofwave/PyOfWave/zipball/master" title="Download PyOfWave Server and Web Client">Download</a></li>
       <li><a href="/demo/" title="Demo PyOfWave (to be provided)">Demo</a></li>
     </ul>
   <header>
