--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
       <li><a href="about/" title="About PyOfWave">About</a></li>
       <li><a href="http://pyofwave.wikispaces.com" title="View wiki pages on design and usage">Wiki</a></li>
       <li><a href="/docs/" title="PyOfWave Documentation">Documentation</a></li>
-      <li><a href="https://github.com/alcinnz/PyOfWave" title="View PyOfWave on GitHub.">Project</a></li>
-      <li><a href="https://github.com/alcinnz/PyOfWave/zipball/master" title="Download PyOfWave Server and Web Client">Download</a></li>
+      <li><a href="https://github.com/pyofwave/PyOfWave" title="View PyOfWave on GitHub.">Project</a></li>
+      <li><a href="https://github.com/pyofwave/PyOfWave/zipball/master" title="Download PyOfWave Server and Web Client">Download</a></li>
       <li><a href="/demo/" title="Demo PyOfWave (to be provided)">Demo</a></li>
     </ul>
 
@@ -25,17 +25,19 @@
 
   <div id="container">
     <p>PyOfWave is an implementation of Google-designed Wave communication platform (a merge of eMail, wiki, IM, and forums) built upon Twisted Python. </p>
-<p>It will come with a jQuery/Agility.js web client to add to your site.</p>
+<p>It will come with a jQuery/Agility.js web client to add to your site. This client aims to be User Freindly by following the basic guidelines of Apple and GNOME and by avoiding wasting visual space.</p>
 <p>It is the active branch of the PyGoWave client, but is not functioning fully yet.</p>
 <h2>Dependencies</h2>
 <ul>
-<li>Python 2.7+</li>
-<li>Twisted</li>
+<li><a href="http://python.org/">Python 2.7+</a></li>
+<li><a href="http://www.twistedmatrix.com/">Twisted</a></li>
+<li><a href="https://github.com/thisismedium/python-xmpp-server">Python XMPP Server</a></li>
 </ul>
 
 <h2>Authors</h2>
-<p>Adrian "alcinnz" Cochrane (alcinnz@eml.cc)</p>
-<p>Knygar Deserves acknowledgement for his undieing support of PyOfWave, as well as his effort in promoting the project and providing branding.</p>
+<p><a href="https://github.com/alcinnz">Adrian "alcinnz" Cochrane</a> (alcinnz@eml.cc)</p>
+<p><a href="https://github.com/knygar">Knygar</a> Deserves acknowledgement for his undieing support of PyOfWave, as well as his effort in promoting the project and providing branding.</p>
+<p><a href="https://github.com/imaginationForPeople">ImaginationForPeople</a> have given some important improvements which makes PyOfWave much more professional.</p>
   </div>
 
   <footer>
