Updating site information.

--- a/index.html
+++ b/index.html
@@ -24,9 +24,10 @@
   </header>
 
   <div id="container">
-    <p>PyOfWave is an implementation of Google-designed Wave communication platform (a merge of eMail, wiki, IM, and forums) built upon Twisted Python. </p>
-<p>It will come with a jQuery/Agility.js web client to add to your site. This client aims to be User Freindly by following the basic guidelines of Apple and GNOME and by avoiding wasting visual space.</p>
-<p>It is the active branch of the PyGoWave client, but is not functioning fully yet.</p>
+    <p>Wave is an all in one Internet communication service. It is a merge of eMail, IM, forums, and wikis resulting in inboxes of decentralized live, fully editable, forum like structured messages. It was designed by then Google Australia employees Lars and Jens Rasmussen and announced at Google I/O in 2009.</p>
+    <p>PyOfWave is an implementation of Wave using the Python language, commited to a new future for this great and flexible technology.</p>
+<p>It will come with a highly brandable/themable User Freindly web client to add to your site. Like Apple Inc. and GNOME, we use User Centered Design and aim for high consistancy with the outside world, the OS, and itself. </p>
+<p>It is the active branch of PyGoWave, but is not functioning fully yet.</p>
 <h2>Dependencies</h2>
 <ul>
 <li><a href="http://python.org/">Python 2.7+</a></li>
