--- a/about/index.html
+++ b/about/index.html
@@ -24,12 +24,19 @@
 
   <div id="container">
     <h2>About</h2>
-    <p>PyOfWave (POW) aims to bring the Google designed communications platform back in a healthy, grass roots, decentralized fashion. We aim to be extendable, sufficintly fast, flexible, and user freindly.</p>
-    <p>For the geeks and corperations using POW to offer Wave services we offer flexibility. POW will fit whatever persistance, authentication, and protocol setup you have.</p>
-    <p>For end user's, we will offer a web interface inspired by the advice published by Edward Tufte and Apple Inc. to offer a superior user experience.</p>
+    <p>PyOfWave (POW) aims to bring the Google designed communications platform back in a healthy, grass roots, decentralized fashion. We aim to be extendable, decentralized, sufficintly fast, flexible, and user freindly. </p>
+    <p>We make full use of XMPP not only for Federation (as Google did) but for clients both native and offline. XMPP already provides us a well tested live decentralized messaging system with web bindings, extensibility, and security forming a great base for Wave.</p>
+    <p>For the geeks and corperations using POW to offer Wave services we offer flexibility. POW will fit whatever persistance, authentication, and protocol setup you have. Furthermore using our settings system, you don't even need to touch POW for all of this.</p>
+    <p>For end user's, we will offer a web interface inspired by the advice published by Edward Tufte, Apple Inc., and GNOME to offer a superior user experience. The dominant charactoristics we aim for in the web interface are:</p>
+    <ul>
+    <li>User Centered Design</li>
+    <li>Consistancy - with world, OS (through semantics), and itself</li>
+    <li>Minimal UI, maximum functionality</li>
+    <li>Information dense - every visual element is both aesthetic and communicative</li>
+    </ul>
 
     <h2>Credits</h2>
-    <p>This list is for truly central contributors on the PyOfWave project.</p>
+    <p>This list is for truly central contributors on the PyOfWave project, dealing with organizational tasks as well as software ones:</p>
     <dl>
        <dt>Adrian Cochrane "alcinnz"</dt>
        <dd>Project Manager</dd>
@@ -38,11 +45,42 @@
     </dl>
 
     <h2>Extended Credits</h2>
-    <p>This section lists contributors who make a major contribution, which initially will be the protocols.</p>
+    <p>This section lists contributors who make a major software contribution:</p>
+    <dl>
+      <dt>Imagination For People</dt>
+      <dd>Setuptools configuration, external preferences</dd>
+    </dl>
     
     <h2>Acknowledgements</h2>
-    <p>Various projects supported PyOfWave indirectly and we would like to think them.</p>
-    <p>The list will be compiled later.</p>
+    <p>Various projects supported PyOfWave indirectly and we would like to think their creators</p>
+    <dl>
+      <dt>Lars &amp; Jens Rasmussen</dt>
+      <dd>For designing Wave in the first Place.</dd>
+      <dt>Guido Van Rossum</dt>
+      <dd>For designing the great Python Language, without which there wouldn't be a <em>Py</em>OfWave</dd>
+    </dl>
+    <p>And, ofcourse, none of this would be possible without the US Millitary and universities creating the Internet, and immensely helped by Tim Berners-Lee by popularising it through his powerful world changing invention, the World Wide Web.</p>
+    <hr/>
+    <dl>
+      <dt>Jabber</dt>
+      <dd>For XMPP, a great base to build on for decentralized communication</dd>
+      <dt>Medium</dt>
+      <dd>For making XMPP easily accessible in Python through a Pythonic API, Python XMPP Server</dd>
+      <dt>Glyph Lefkowitz</dt>
+      <dd>For his work on implementing Internet protocols Pythonically</dd> 
+    </dl>
+    <hr/>
+    <dl>
+      <dt>John Reseig</dt>
+      <dd>For easing DOM manipulations and creation of rich experiences no matter how shallow or deep, we all know jQuery</dd>
+      <dt>Jack Moffit</dt>
+      <dd>For easy access of BOSH XMPP streams from the browser, Strophe.js</dd>
+      <dt>Artur Adib</dt>
+      <dd>For further easing rich web interfaces, Agility.js</dd>
+      <dt>Jeremy Ashkenas</dt>
+      <dd>For Pythonising JavaScript, CoffeeScript</dd>
+    </dl>
+    <p>Thanks also goes out to the large number of people who helped the above individuals and groups build and improve their great projects.</p>
 </div>
 
   <footer>
