Updating documentation and fixing demo page.

--- a/demo/index.html
+++ b/demo/index.html
@@ -14,8 +14,8 @@
       <li><a href="/about/" title="About PyOfWave">About</a></li>
       <li><a href="http://pyofwave.wikispaces.com" title="View wiki pages on design and usage">Wiki</a></li>
       <li><a href="/docs/" title="PyOfWave Documentation">Documentation</a></li>
-      <li><a href="https://github.com/alcinnz/PyOfWave" title="View PyOfWave on GitHub.">Project</a></li>
-      <li><a href="http://github.com/alcinnz/PyOfWave/zipball/masterz" title="Download PyOfWave Server and Web Client">Download</a></li>
+      <li><a href="https://github.com/pyofwave/PyOfWave" title="View PyOfWave on GitHub.">Project</a></li>
+      <li><a href="http://github.com/pyofwave/PyOfWave/zipball/masterz" title="Download PyOfWave Server and Web Client">Download</a></li>
       <li class="current">Demo</li>
     </ul>
 
