--- a/pyofwave_client/wave/index.html
+++ b/pyofwave_client/wave/index.html
@@ -10,7 +10,7 @@
 	<!-- ko template: 'wave-toolbar' --><!-- /ko -->
 
 	<script type="text/javascript">
-		var ko = require('../api/knockout-2.1.0'), wave = require('sample/wave1');
+		var ko = require('api/knockout-2.1.0'), wave = require('sample/wave1');
 		ko.applyBindings({wave: wave});
 	</script>
 </body>
