--- a/pyofwave_client/proto/modal.html
+++ b/pyofwave_client/proto/modal.html
@@ -7,13 +7,22 @@
 	<script src="../src/api/jquery-1.5.1.js"></script>
 	<script src="../src/api/jqueryUI/jquery-ui-1.8.14.custom.js"></script>
 	<script>
+		var $overlay = $('<div>').css({
+				position: 'absolute', top: 0, left: 0, 
+				width: window.innerWidth, height: window.innerHeight, 
+				background: 'black', opacity: 0.1})
+
 		function popover($el) {
 			$el.hide() // Add overlay to increase modality and prevent clashes between views?
 			return function(evtOrEl) {
 				$el.fadeIn().click(function(evt) {evt.stopPropagation()})
 					.position({of: evtOrEl, offset: "0 10", collision: "fit",
 						my: 'top', at: 'bottom'})
-				$(document).click(function() {$el.fadeOut()})
+				$overlay.fadeIn()
+					.one('click', function(e) {
+						e.stopPropagation()
+						$(this).add($el).fadeOut()
+					})
 			}
 		}
 		$(function() {
@@ -24,6 +33,8 @@
 					popup(this)
 				})
 			})
+
+			$overlay.prependTo('body').hide()
 		})
 	</script>
 	<style>
